--- a/snapconnect-v2/package.json
+++ b/snapconnect-v2/package.json
@@ -16,8 +16,15 @@
     "@supabase/supabase-js": "^2.50.1",
     "expo": "~53.0.12",
     "expo-av": "^15.1.6",
+    "expo-blur": "^14.1.5",
     "expo-camera": "^16.1.8",
+    "expo-font": "^13.3.1",
+    "expo-gl": "^15.1.6",
+    "expo-gl-cpp": "^11.4.0",
+    "expo-haptics": "^14.1.4",
+    "expo-image": "~2.3.0",
     "expo-image-picker": "^16.1.4",
+    "expo-linear-gradient": "^14.1.5",
     "expo-media-library": "^17.1.7",
     "expo-status-bar": "~2.2.3",
     "nativewind": "^4.1.23",
@@ -27,10 +34,11 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "^4.11.1",
+    "react-native-svg": "^15.12.0",
     "react-native-url-polyfill": "^2.0.0",
+    "react-native-view-shot": "^4.0.3",
     "tailwindcss": "^3.4.17",
-    "zustand": "^5.0.5",
-    "expo-image": "~2.3.0"
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
